# CustomSDK

./: .gitignore  .gitlab-ci.yml  CNAME  Dockerfile  LICENSE  README.md  auto_commit.sh  auto_exec.sh  auto_remove.sh
src/CustomSDK/: CMakeLists.txt  CMakePresets.json  aarch64-elf.cmake  arm-none-eabi.cmake  i686-elf.cmake  module.cmake  x86_64-elf.cmake
src/CustomSDK/00_Libraries/: CMakeLists.txt
src/CustomSDK/00_Libraries/BasicFramework/: CMakeLists.txt
src/CustomSDK/00_Libraries/BasicFramework/src/: AbstractCustomModule.cpp  AbstractFrameworkManager.cpp  AbstractPlugin.cpp  ConfigManager.cpp  ConfigManagerPrivate.h  DynamicLibrary.cpp  LogManager.cpp  LogManagerPrivate.cpp  LogManagerPrivate.h  stdafx.h
src/CustomSDK/00_Libraries/BasicSupport/: CMakeLists.txt
src/CustomSDK/00_Libraries/BasicSupport/src/: AbstractMessageFrameParser.cpp  AbstractMessageFrameParser.h  AsyncTcpClient.cpp  AsyncTcpClient.h  AsyncTcpClientPrivate.cpp  AsyncTcpClientPrivate.h  AsyncTcpServer.cpp  AsyncTcpServer.h  MicroUtils.cpp  Timer.cpp  TimerPrivate.cpp  TimerPrivate.h  UniversalFactory.cpp  stdafx.h
src/CustomSDK/00_Libraries/BasicUIFramework/: CMakeLists.txt
src/CustomSDK/00_Libraries/BasicUIFramework/resource/: BasicUIFramework.qrc
src/CustomSDK/00_Libraries/BasicUIFramework/src/: AbstractUIPlugin.cpp  BasicUIFramework.cpp  FlowLayout.cpp  stdafx.h
src/CustomSDK/00_Libraries/CommonFramework/src/: AbstractFrameworkManager.cpp  AbstractPlugin.cpp  CommonFramework.cpp  ConfigManager.cpp  ConfigManagerPrivate.cpp  ConfigManagerPrivate.h  DynamicLibrary.cpp  LogManager.cpp  LogManagerPrivate.cpp  LogManagerPrivate.h  main.cpp  stdafx.h
src/CustomSDK/00_Libraries/CustomFramework/: CMakeLists.txt
src/CustomSDK/00_Libraries/CustomFramework/src/: CustomFrameworkManager.cpp  stdafx.h
src/CustomSDK/00_Libraries/CustomFramework4CSharp/: CMakeLists.txt
src/CustomSDK/00_Libraries/CustomFramework4CSharp/src/: CustomFrameworkManager.cs
src/CustomSDK/00_Libraries/CustomFramework4Java/: CMakeLists.txt
src/CustomSDK/00_Libraries/CustomFramework4Java/src/: CustomFrameworkManager.java
src/CustomSDK/00_Libraries/CustomFramework4Python/: CMakeLists.txt
src/CustomSDK/00_Libraries/CustomFramework4Python/src/: CustomFrameworkManager.cpp  stdafx.h
src/CustomSDK/00_Libraries/MicroserviceFramework/: CMakeLists.txt
src/CustomSDK/00_Libraries/MicroserviceFramework/src/: main.cpp  stdafx.h
src/CustomSDK/02_Plugins/: CMakeLists.txt
src/CustomSDK/05_Examples/CPlusPlus/: CMakeLists.txt  module.cmake
src/CustomSDK/05_Examples/CPlusPlus/CustomModules/: CMakeLists.txt
src/CustomSDK/05_Examples/CSharp/: CMakeLists.txt  module.cmake
src/CustomSDK/05_Examples/CSharp/CustomModules/: CMakeLists.txt
src/CustomSDK/05_Examples/Java/: CMakeLists.txt
src/CustomSDK/05_Examples/Java/CustomModules/: CMakeLists.txt
src/CustomSDK/05_Examples/Python/: module.cmake
src/CustomSDK/05_Examples/Python/CustomModules/: CMakeLists.txt
src/CustomSDK/06_Tests/: CMakeLists.txt
src/CustomSDK/06_Tests/SimpleExecutable/: CMakeLists.txt
src/CustomSDK/Applications/: CMakeLists.txt  Readme.txt
src/CustomSDK/Applications/SimpleGRPCClient/: CMakeLists.txt
src/CustomSDK/Applications/SimpleGRPCServer/: CMakeLists.txt
src/CustomSDK/Applications/SimpleWebService/: CMakeLists.txt
src/CustomSDK/Applications/SourceCodeGenerator/: CMakeLists.txt
src/CustomSDK/Applications/VisualDefinationTool/: CMakeLists.txt
src/CustomSDK/Examples/: CMakeLists.txt  Readme.txt
src/CustomSDK/Examples/Boost/: CMakeLists.txt
src/CustomSDK/Examples/Boost/Chrono/: CMakeLists.txt  (+1 more)
src/CustomSDK/Examples/CSharp/: CMakeLists.txt  module.cmake
src/CustomSDK/Examples/Java/: CMakeLists.txt  module.cmake
src/CustomSDK/Examples/LogUtil/: CMakeLists.txt  LogAppender.cpp  LogAppender.h  LogEvent.h  LogFormatter.cpp  LogFormatter.h  LogLevel.cpp  LogLevel.h  LogManager.cpp  LogManager.h  Logger.cpp  Logger.h  main.cpp
src/CustomSDK/Examples/Others/: CMakeLists.txt
src/CustomSDK/Examples/Python/: CMakeLists.txt
src/CustomSDK/Examples/QRCode/: CMakeLists.txt  main.cpp
src/CustomSDK/Examples/Qt/: CMakeLists.txt
src/CustomSDK/Examples/Socket/: CMakeLists.txt
src/CustomSDK/Libraries/: CMakeLists.txt  Readme.txt
src/CustomSDK/Libraries/BasicFramework/: CMakeLists.txt  Readme.txt
src/CustomSDK/Libraries/BasicSupport/: CMakeLists.txt  Readme.txt
src/CustomSDK/Libraries/BasicUIFramework/: CMakeLists.txt  Readme.txt
src/CustomSDK/Libraries/CustomFramework/: CMakeLists.txt
src/CustomSDK/Libraries/CustomFramework4CSharp/: CMakeLists.txt
src/CustomSDK/Libraries/CustomFramework4Java/: CMakeLists.txt
src/CustomSDK/Libraries/CustomFramework4Python/: CMakeLists.txt
src/CustomSDK/Models/: Readme.txt
src/CustomSDK/Modules/: CMakeLists.txt  Readme.txt
src/CustomSDK/Modules/Proto/: CMakeLists.txt
src/CustomSDK/Modules/QRCodeGenerator/: CMakeLists.txt
src/CustomSDK/Modules/RegularExpressionValidator/: .!35339!CMakeLists.txt  CMakeLists.txt
src/CustomSDK/Modules/TcpSocketClient/: CMakeLists.txt
src/CustomSDK/Plugins/: CMakeLists.txt  Readme.txt
src/CustomSDK/Plugins/MagicTools/: CMakeLists.txt  Readme.txt
src/CustomSDK/Tools/: CMakeLists.txt
src/CustomSDK/Tools/HttpClientDemo/: CMakeLists.txt
src/CustomSDK/Tools/IdentifierChecker/: CMakeLists.txt
src/CustomSDK/Tools/IdentifyCardNumberChecker/: CMakeLists.txt
src/CustomSDK/Tools/MagicToolBox/: CMakeLists.txt  Readme.txt
src/CustomSDK/Tools/QRCodeGenerator/: CMakeLists.txt
src/CustomSDK/Tools/QTcpSocketClientDemo/: CMakeLists.txt
src/CustomSDK/Tools/QTcpSocketServerDemo/: CMakeLists.txt
src/CustomSDK/Tools/QUdpSocketClientDemo/: CMakeLists.txt
src/CustomSDK/Tools/QUdpSocketServerDemo/: CMakeLists.txt
src/CustomSDK/Tools/RegularExpressionValidator/: CMakeLists.txt
src/CustomSDK/Tools/SerialPortDebugger/: CMakeLists.txt
src/CustomSDK/Tools/SourceCodeGenerator/: CMakeLists.txt
src/CustomSDK/Tools/UMLDesigner/: CMakeLists.txt
src/CustomSDK/Tools/VisualDefinitionTool/: CMakeLists.txt
src/CustomSDK/Tools/VisualDesigner/: CMakeLists.txt
(+533 files in other folders)
